# src/models/Notification.ts
@@ -7,7 +7,7 @@ export interface NotificationPayload {
 
 export interface NotificationResponse extends NotificationPayload {
   userEmail: string
-  applicationID: Schema.Types.ObjectId
+  applicationID: string
   status: Status
   petImage: string
   isSeen: boolean
@@ -16,9 +16,16 @@ export interface NotificationResponse extends NotificationPayload {
   date: string
 }
 
+export interface AllNotificationsResponse {
+  notifications: NotificationResponse[]
+  totalPages: number
+}
+
 export interface NotificationDocument
-  extends Omit<NotificationResponse, 'id'>,
-    Document {}
+  extends Omit<NotificationResponse, 'id' | 'applicationID'>,
+    Document {
+  applicationID: Schema.Types.ObjectId
+}
 
 const NotificationSchema = new Schema<NotificationDocument>(
   {
